--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,24 @@
-plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+buildscript {
+    ext.kotlin_version = '1.3.21'
+    ext.spring_boot_version = '2.1.6.RELEASE'
+
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version"
+    }
 }
+
+apply plugin: 'java'
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-spring'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group 'org.tonton-yoyo'
 version '1.0-SNAPSHOT'
@@ -10,7 +28,20 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    //Kotlin standard
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    //Spring boot web
+    implementation "org.springframework.boot:spring-boot-starter-web:2.1.3.RELEASE"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+"
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+
+    // Testing
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+    testImplementation 'org.mockito:mockito-core:2.+'
+    testImplementation 'junit:junit:4.12'
 }
 
 compileKotlin {
