--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     //Spring boot web
     implementation "org.springframework.boot:spring-boot-starter-web:2.1.3.RELEASE"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+"
-    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+    //implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
 
     // Testing
     testCompile 'org.springframework.boot:spring-boot-starter-test'
